# heist-tutorial

./: LICENSE  README.md  heist-tutorial.cabal  tutorial.md
data/: shoppinglist
snaplets/heist/example1/: index.tpl
snaplets/heist/example2/: index.tpl
snaplets/heist/example3/: index.tpl
snaplets/heist/example4/: _base.tpl  index.tpl  second.tpl
src/: Application.hs  Site.hs  Tutorial.hs
src/Tutorial/: Example1.hs  Example2.hs  Example3.hs  Example4.hs  Examples.hs
