Name:                heist-tutorial
Version:             0.1
Synopsis:            examples for Heist tutorial
Description:         Project Description Here
License:             BSD3
Author:              Kari Pahula
Maintainer:          kaol@iki.fi
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable tutorial
  hs-source-dirs: src
  main-is: Tutorial.hs

  Build-depends:
    bytestring                >= 0.9.1   && < 0.11,
    heist                     == 1.0.*,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    transformers              >= 0.3     && < 0.5,
    transformers-compat       >= 0.4     && < 0.5,
    either                    >= 4.4.1   && < 4.5,
    errors                    >= 2       && < 2.1,
    uuid                      >= 1.3     && < 1.4,
    snap                      >= 1.0     && < 1.1,
    snap-core                 >= 1.0     && < 1.1,
    snap-server               >= 1.0     && < 1.1,
    snap-loader-static        >= 1.0     && < 1.1,
    text                      >= 0.11    && < 1.3,
    time                      >= 1.1     && < 1.6,
    xmlhtml                   >= 0.1     && < 0.3,
    containers                >= 0.5     && < 0.6,
    map-syntax                >= 0.2     && < 0.3                        

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 4.14

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
